Módulo de permissões + ajustes

--- a/src/app/admin/views/essential/500.phtml
+++ b/src/app/admin/views/essential/500.phtml
@@ -23,7 +23,8 @@
       <div class="page-error">
         <h1 class="number text-center">500</h1>
         <h2 class="description text-center">Ops, ocorreu algum problema!</h2>
-        <h3 class="text-center">Por favor entre em contato com o suporte usando o e-mail: <a href="mailto:suporte@dindigital.com">suporte@dindigital.com</a>.</h3>
+        <h3 class="text-center">Motivo: <?php echo $data['msg']; ?><br />
+          Por favor entre em contato com o suporte usando o e-mail: <a href="mailto:suporte@dindigital.com">suporte@dindigital.com</a>.</h3>
       </div>
       <div class="text-center copy">&copy; 2014 <a href="#">DIN DIGITAL</a></div>
 
