--- a/src/app/admin/views/includes/nav.phtml
+++ b/src/app/admin/views/includes/nav.phtml
@@ -2,46 +2,70 @@
   <div class="cl-toggle"><i class="fa fa-bars"></i></div>
   <div class="cl-navblock">
     <ul class="cl-vnavigation">
-      <li>
-        <a href="/admin/log/list/"><i class="fa fa-bug"></i>Log</a>
-      </li>
-      <li>
-        <a href="/admin/configuracao/cadastro/"><i class="fa fa-certificate"></i>Configurações</a>
-      </li>
-      <li>
-        <a href="/admin/lixeira/lista/"><i class="fa fa-trash-o"></i>Lixeira</a>
-      </li>
-      <li>
-        <a href="/admin/usuario/lista/"><i class="fa fa-male"></i>Usuário</a>
-      </li>
-      <li>
-        <a href="/admin/foto/lista/"><i class="fa fa-picture-o"></i>Fotos</a>
-      </li>
-      <li>
-        <a href="/admin/video/lista/"><i class="fa fa-video-camera"></i>Vídeos</a>
-      </li>
-      <li>
-        <a href="#"><i class="fa fa-paperclip"></i>Notícias</a>
-        <ul class="sub-menu">
-          <li>
-            <a href="/admin/noticia_cat/lista/"><i class="fa fa-paperclip"></i>Categoria</a>
-          </li>
-          <li>
-            <a href="/admin/noticia/lista/"><i class="fa fa-paperclip"></i>Notícias</a>
-          </li>
-        </ul>
-      </li>
-      <li>
-        <a href="#"><i class="fa fa-paperclip"></i>Páginas Insitucionais</a>
-        <ul class="sub-menu">
-          <li>
-            <a href="/admin/pagina_cat/lista/"><i class="fa fa-paperclip"></i>Menu</a>
-          </li>
-          <li>
-            <a href="/admin/pagina/lista/"><i class="fa fa-paperclip"></i>Páginas</a>
-          </li>
-        </ul>
-      </li>
+      <?php if ( isset($data['permissao']['Log']) ): ?>
+        <li>
+          <a href="/admin/log/list/"><i class="fa fa-bug"></i>Log</a>
+        </li>
+      <?php endif; ?>
+      <?php if ( isset($data['permissao']['Configuracao']) ): ?>
+        <li>
+          <a href="/admin/configuracao/cadastro/"><i class="fa fa-certificate"></i>Configurações</a>
+        </li>
+      <?php endif; ?>
+      <?php if ( isset($data['permissao']['Lixeira']) ): ?>
+        <li>
+          <a href="/admin/lixeira/lista/"><i class="fa fa-trash-o"></i>Lixeira</a>
+        </li>
+      <?php endif; ?>
+      <?php if ( isset($data['permissao']['Usuario']) ): ?>
+        <li>
+          <a href="/admin/usuario/lista/"><i class="fa fa-male"></i>Usuário</a>
+        </li>
+      <?php endif; ?>
+      <?php if ( isset($data['permissao']['Foto']) ): ?>
+        <li>
+          <a href="/admin/foto/lista/"><i class="fa fa-picture-o"></i>Fotos</a>
+        </li>
+      <?php endif; ?>
+      <?php if ( isset($data['permissao']['Video']) ): ?>
+        <li>
+          <a href="/admin/video/lista/"><i class="fa fa-video-camera"></i>Vídeos</a>
+        </li>
+      <?php endif; ?>
+      <?php if ( isset($data['permissao']['Noticia']) || isset($data['permissao']['NoticiaCat']) ): ?>
+        <li>
+          <a href="#"><i class="fa fa-paperclip"></i>Notícias</a>
+          <ul class="sub-menu">
+            <?php if ( isset($data['permissao']['NoticiaCat']) ): ?>
+              <li>
+                <a href="/admin/noticia_cat/lista/"><i class="fa fa-paperclip"></i>Categoria</a>
+              </li>
+            <?php endif; ?>
+            <?php if ( isset($data['permissao']['Noticia']) ): ?>
+              <li>
+                <a href="/admin/noticia/lista/"><i class="fa fa-paperclip"></i>Notícias</a>
+              </li>
+            <?php endif; ?>
+          </ul>
+        </li>
+      <?php endif; ?>
+      <?php if ( isset($data['permissao']['PaginaCat']) || isset($data['permissao']['Pagina']) ): ?>
+        <li>
+          <a href="#"><i class="fa fa-paperclip"></i>Páginas Insitucionais</a>
+          <ul class="sub-menu">
+            <?php if ( isset($data['permissao']['PaginaCat']) ): ?>
+              <li>
+                <a href="/admin/pagina_cat/lista/"><i class="fa fa-paperclip"></i>Menu</a>
+              </li>
+            <?php endif; ?>
+            <?php if ( isset($data['permissao']['Pagina']) ): ?>
+              <li>
+                <a href="/admin/pagina/lista/"><i class="fa fa-paperclip"></i>Páginas</a>
+              </li>
+            <?php endif; ?>
+          </ul>
+        </li>
+      <?php endif; ?>
       <li>
         <a href="#"><i class="fa fa-smile-o"></i>Exemplos</a>
         <ul class="sub-menu">
