--- a/src/app/admin/views/usuario_cadastro.phtml
+++ b/src/app/admin/views/usuario_cadastro.phtml
@@ -66,6 +66,13 @@
             </div>
           </div>
 
+          <div class="form-group">
+            <label class="col-sm-2 control-label">Permissões</label>
+            <div class="col-sm-10">
+              <?php echo @$data['table']['permissao'] ?>
+            </div>
+          </div>
+
           {$SUBMIT}
 
         </form>
