Pasta formats, iniciando com formatação de video

--- a/src/app/admin/views/video_cadastro.phtml
+++ b/src/app/admin/views/video_cadastro.phtml
@@ -27,7 +27,7 @@
           <div class="form-group">
             <label class="col-sm-2 control-label">Título</label>
             <div class="col-sm-10">
-              <input name="titulo" type="text" value="<?php echo @$data['table']['titulo']; ?>" placeholder="Título" class="limit_text form-control" maxlength="">
+              <input name="titulo" type="text" value="<?php echo $data['table']['titulo']; ?>" placeholder="Título" class="limit_text form-control" maxlength="255">
               <div class="limit_info"></div>
             </div>
           </div>
