--- a/src/app/admin/views/video_lista.phtml
+++ b/src/app/admin/views/video_lista.phtml
@@ -39,7 +39,7 @@
                 <tr>
                   <td><input class="excluir" type="checkbox" name="excluir[]" id="exc_<?php echo $this->_data['entity']['name']; ?>_<?php echo $row['id_video']; ?>" /></td>
                   <td><input class="setAtivo" type="checkbox" <?php if ( $row['ativo'] == '1' ): ?> checked="checked"<?php endif; ?> id="<?php echo $row['id_video']; ?>" /></td>
-                  <td><?php echo $data['DateFormat']::filter_date($row['data']); ?></td>
+                  <td><?php echo $row['data']; ?></td>
                   <td><?php echo $row['titulo']; ?></td>
                   <td class="text-center">
                     <a class="label label-default btn_edicao" href="<?php echo $row[$this->_data['entity']['id']]; ?>">
