Adicionando funcionalidade de salvar e abrir com os mesmos dados em noticia cat

--- a/src/app/admin/views/includes/submit.phtml
+++ b/src/app/admin/views/includes/submit.phtml
@@ -8,7 +8,7 @@
       </button>
       <ul class="dropdown-menu" role="menu">
         <li><button type="submit" title="Salvar e voltar para lista" class="btn-link-submit submit_lista">Salvar e voltar para lista</button></li>
-        <li><button type="submit" title="Salvar e abrir novo com os mesmos dados" class="btn-link-submit">Salvar e abrir novo com os mesmos dados</button></li>
+        <li><button type="submit" title="Salvar e abrir novo com os mesmos dados" class="btn-link-submit submit_same">Salvar e abrir novo com os mesmos dados</button></li>
         <li class="divider"></li>
         <li><a href="#" title="Voltar para a lista" class="btn_lista">Voltar para lista</a></li>
         <li><a href="#" title="Novo registro" class="btn_cadastro">Novo registro</a></li>
