--- a/src/app/admin/views/essential/lixeira_lista.phtml
+++ b/src/app/admin/views/essential/lixeira_lista.phtml
@@ -46,7 +46,7 @@
               <?php foreach ( $data['list'] as $row ): ?>
                 <tr>
                   <td><input class="excluir" type="checkbox" name="excluir[]" id="exc_<?php echo $row['name']; ?>_<?php echo $row['id']; ?>" /></td>
-                  <td><?php echo $data['DateFormat']::filter_date($row['del_data'], 'd/m/Y H:i:s'); ?></td>
+                  <td><?php echo $row['del_data']; ?></td>
                   <td><?php echo $row['titulo']; ?></td>
                   <td><?php echo $row['secao']; ?></td>
                 </tr>
