--- a/src/app/admin/views/pagina_lista.phtml
+++ b/src/app/admin/views/pagina_lista.phtml
@@ -47,7 +47,7 @@
                   <td><?php echo $row['ordem']; ?></td>
                   <td><?php echo $row['menu']; ?></td>
                   <td><?php echo $row['titulo']; ?></td>
-                  <td><?php echo $data['DateFormat']::filter_date($row['inc_data']); ?></td>
+                  <td><?php echo $row['inc_data']; ?></td>
                   <td class="text-center">
                     <a class="label label-default" href="/admin/<?php echo $this->_data['entity']['tbl']; ?>/cadastro/<?php echo $row[$this->_data['entity']['id']]; ?>/">
                       <i class="fa fa-pencil"></i>
