--- a/src/app/admin/views/noticiacat_lista.phtml
+++ b/src/app/admin/views/noticiacat_lista.phtml
@@ -45,7 +45,7 @@
                   <td><input class="setAtivo" type="checkbox" <?php if ( $row['ativo'] == '1' ): ?> checked="checked"<?php endif; ?> id="<?php echo $row['id_noticia_cat']; ?>" /></td>
                   <td><?php echo $row['ordem']; ?></td>
                   <td><?php echo $row['titulo']; ?></td>
-                  <td><?php echo $data['DateFormat']::filter_date($row['inc_data']); ?></td>
+                  <td><?php echo $row['inc_data']; ?></td>
                   <td class="text-center">
                     <a class="label label-default" href="/admin/noticia_cat/cadastro/<?php echo $row['id_noticia_cat']; ?>/">
                       <i class="fa fa-pencil"></i>
