--- a/src/app/admin/views/essential/log_lista.phtml
+++ b/src/app/admin/views/essential/log_lista.phtml
@@ -19,10 +19,10 @@
             <input class="form-control" name="descricao" type="text" placeholder="Busca por descrição" value="<?php echo $data['busca']['descricao']; ?>">
           </div>
           <div class="col-sm-4 col-md-4 col-lg-2">
-            <?php echo $data['dropdown']['acao']; ?>
+            <?php echo $data['busca']['acao']; ?>
           </div>
           <div class="col-sm-4 col-md-4 col-lg-2">
-            <?php echo $data['dropdown']['name']; ?>
+            <?php echo $data['busca']['name']; ?>
           </div>
           <input type="button" value="Limpar" class="limpar_busca btn btn-default btn-rad" />
           <input type="submit" value="Buscar" class="btn btn-info btn-rad" />
