formatFilters em Lixeira

--- a/src/app/admin/views/essential/lixeira_lista.phtml
+++ b/src/app/admin/views/essential/lixeira_lista.phtml
@@ -16,7 +16,7 @@
             <input class="form-control" name="titulo" type="text" placeholder="Busca por título" value="<?php echo $data['busca']['titulo']; ?>">
           </div>
           <div class="col-sm-4 col-md-4 col-lg-2">
-            <?php echo $data['secao']; ?>
+            <?php echo $data['busca']['secao']; ?>
           </div>
           <input type="button" value="Limpar" class="limpar_busca btn btn-default btn-rad" />
           <input type="submit" value="Buscar" class="btn btn-info btn-rad" />
