Inclusão de return false para que formulário não faça submit antes do carregamento do ajaxform

--- a/src/app/admin/views/essential/recuperar_senha.phtml
+++ b/src/app/admin/views/essential/recuperar_senha.phtml
@@ -3,7 +3,7 @@
   <div class="middle-login">
     <div class="block-flat">
       <div>
-        <form style="margin-bottom: 0px !important;" class="ajaxform form-horizontal" method="post" action="" autocomplete="off">
+        <form style="margin-bottom: 0px !important;" class="ajaxform form-horizontal" method="post" action="" autocomplete="off" onsubmit="return false;">
 
           <div class="content">
 
