--- a/src/app/admin/views/exemplo_cadastro.phtml
+++ b/src/app/admin/views/exemplo_cadastro.phtml
@@ -9,7 +9,7 @@
 
         {$ALERTS}
 
-        <form id="main_form" class="ajaxform form-horizontal group-border-dashed" method="post" style="border-radius: 0px;">
+        <form id="main_form" class="ajaxform form-horizontal group-border-dashed" method="post" style="border-radius: 0px;" onsubmit="return false;">
 
           {$SUBMIT}
 
