--- a/src/app/admin/views/essential/login.phtml
+++ b/src/app/admin/views/essential/login.phtml
@@ -6,7 +6,7 @@
         <h3 class="text-center"><img class="logo-img" src="/admin/images/logo.png" alt="logo"/>DIN DIGITAL</h3>
       </div>
       <div>
-        <form style="margin-bottom: 0px !important;" class="ajaxform form-horizontal" method="post" action="" autocomplete="off">
+        <form style="margin-bottom: 0px !important;" class="ajaxform form-horizontal" method="post" action="" autocomplete="off" onsubmit="return false;">
 
           <div class="content">
 
