--- a/src/app/admin/views/pagina_cadastro.phtml
+++ b/src/app/admin/views/pagina_cadastro.phtml
@@ -11,7 +11,7 @@
       </div>
       <div class="content">
 
-        <form id="main_form" class="form-horizontal group-border-dashed ajaxform" method="post" style="border-radius: 0px;">
+        <form id="main_form" class="form-horizontal group-border-dashed ajaxform" method="post" style="border-radius: 0px;" onsubmit="return false;">
 
           <input type="hidden" name="redirect" value="cadastro" />
 
