--- a/src/app/admin/views/noticia_cadastro.phtml
+++ b/src/app/admin/views/noticia_cadastro.phtml
@@ -67,9 +67,16 @@
           </div>
 
           <div class="form-group">
-            <label class="col-sm-2 control-label">Corpo</label>
+            <label class="col-sm-2 control-label">Fotos Relacionadas</label>
             <div class="col-sm-10">
               <?php echo @$data['table']['r_noticia_foto'] ?>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label class="col-sm-2 control-label">Vídeos Relacionados</label>
+            <div class="col-sm-10">
+              <?php echo @$data['table']['r_noticia_video'] ?>
             </div>
           </div>
 
