--- a/src/app/admin/views/layouts/layout.phtml
+++ b/src/app/admin/views/layouts/layout.phtml
@@ -40,7 +40,7 @@
             <li class="dropdown profile_menu">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                 <?php echo $data['user']['avatar_img'] ?>
-                <?php echo $data['user']['nome'] ?> <b class="caret"></b>
+                <?php echo $data['user']['name'] ?> <b class="caret"></b>
               </a>
               <ul class="dropdown-menu">
                 <li><a href="/admin/config/cadastro/">Meus Dados</a></li>
