Ajustando classes/nomes em views para novo padrão inglês.

--- a/src/app/admin/views/exemplo_galeria.phtml
+++ b/src/app/admin/views/exemplo_galeria.phtml
@@ -14,9 +14,9 @@
           {$SUBMIT}
 
           <div class="form-group">
-            <label class="col-sm-2 control-label" for="ativo">Ativo</label>
+            <label class="col-sm-2 control-label" for="active">Ativo</label>
             <div class="col-sm-10">
-              <input type="checkbox" name="ativo" id="ativo" checked="checked" />
+              <input type="checkbox" name="active" id="active" checked="checked" />
             </div>
           </div>
 
