--- a/src/app/admin/views/includes/alerts.phtml
+++ b/src/app/admin/views/includes/alerts.phtml
@@ -1,8 +1,8 @@
 <div class="col-sm-12">
   <div class="content">
-    <?php if ( isset($data['registro_salvo']) ): ?>
+    <?php if ( isset($data['saved_msg']) ): ?>
       <div class="alert alert-success alert-success-fade">
-        <i class="fa fa-check sign"></i><strong><?php echo $data['registro_salvo']; ?></strong>
+        <i class="fa fa-check sign"></i><strong><?php echo $data['saved_msg']; ?></strong>
       </div>
     <?php endif; ?>
     <div class="alert alert-success">
