--- a/src/app/admin/views/includes/submit.phtml
+++ b/src/app/admin/views/includes/submit.phtml
@@ -10,11 +10,11 @@
         <li><button type="submit" title="Salvar e voltar para lista" class="btn-link-submit submit_lista">Salvar e voltar para lista</button></li>
         <li><button type="submit" title="Salvar e abrir novo com os mesmos dados" class="btn-link-submit submit_previous">Salvar e abrir novo com os mesmos dados</button></li>
         <li class="divider"></li>
-        <li><a href="#" title="Voltar para a lista" class="btn_lista">Voltar para lista</a></li>
-        <li><a href="#" title="Novo registro" class="btn_cadastro">Novo registro</a></li>
+        <li><a href="#" title="Voltar para a lista" class="btn_list">Voltar para lista</a></li>
+        <li><a href="#" title="Novo registro" class="btn_save">Novo registro</a></li>
       </ul>
     </div>
-    <a href="#" title="Voltar para a lista" class="btn btn-default btn-rad btn_lista btn_space">Voltar</a>
-    <a href="#" title="Novo registro" class="btn btn-default btn-rad btn_cadastro btn_space">Novo registro</a>
+    <a href="#" title="Voltar para a lista" class="btn btn-default btn-rad btn_list btn_space">Voltar</a>
+    <a href="#" title="Novo registro" class="btn btn-default btn-rad btn_save btn_space">Novo registro</a>
   </div>
 </div>
