--- a/src/app/admin/views/noticia_cadastro.phtml
+++ b/src/app/admin/views/noticia_cadastro.phtml
@@ -1,4 +1,4 @@
-<input type="hidden" id="link_prefix" value="/admin/noticia/" />
+<input type="hidden" id="link_prefix" value="/admin/<?php echo $this->_data['entity']['tbl']; ?>/" />
 
 <div class="row">
   <div class="col-md-12">
@@ -13,19 +13,19 @@
 
         <form id="main_form" class="form-horizontal group-border-dashed ajaxform" method="post" style="border-radius: 0px;" onsubmit="return false;">
 
-          <input type="hidden" name="redirect" value="cadastro" />
+          <input type="hidden" name="redirect" value="save" />
 
           {$SUBMIT}
 
           <div class="form-group">
-            <label class="col-sm-2 control-label" for="ativo">Ativo</label>
+            <label class="col-sm-2 control-label" for="active">Ativo</label>
             <div class="col-sm-10">
-              <label class="checkbox-inline"><input type="checkbox" name="ativo" id="ativo" <?php if ( @$data['table']['ativo'] == '1' ): ?>checked="checked"<?php endif; ?> /></label>
+              <label class="checkbox-inline"><input type="checkbox" name="active" id="active" <?php if ( @$data['table']['active'] == '1' ): ?>checked="checked"<?php endif; ?> /></label>
             </div>
           </div>
 
           <div class="form-group">
-            <label class="col-sm-2 control-label" for="ativo">Categoria</label>
+            <label class="col-sm-2 control-label">Categoria</label>
             <div class="col-sm-10">
               <?php echo @$data['table']['id_noticia_cat']; ?>
             </div>
@@ -41,7 +41,7 @@
           <div class="form-group">
             <label class="col-sm-2 control-label">Data</label>
             <div class="col-sm-10">
-              <input name="data" type="text" value="<?php echo @$data['table']['data']; ?>" placeholder="Data" class="form-control dataMask">
+              <input name="data" type="text" value="<?php echo @$data['table']['data']; ?>" placeholder="Data" class="form-control dateMask">
             </div>
           </div>
 
