--- a/src/app/admin/views/essential/lixeira_lista.phtml
+++ b/src/app/admin/views/essential/lixeira_lista.phtml
@@ -11,14 +11,14 @@
       </div>
 
       <div class="content">
-        <form method="get" class="form_busca">
+        <form method="get" class="form_search">
           <div class="col-sm-4 col-md-4 col-lg-2">
             <input class="form-control" name="titulo" type="text" placeholder="Busca por título" value="<?php echo $data['busca']['titulo']; ?>">
           </div>
           <div class="col-sm-4 col-md-4 col-lg-2">
             <?php echo $data['busca']['secao']; ?>
           </div>
-          <input type="button" value="Limpar" class="limpar_busca btn btn-default btn-rad" />
+          <input type="button" value="Limpar" class="clean_search btn btn-default btn-rad" />
           <input type="submit" value="Buscar" class="btn btn-info btn-rad" />
         </form>
       </div>
@@ -36,7 +36,7 @@
           <table class="table no-border hover">
             <thead class="no-border">
               <tr>
-                <th style="width:2%;"><input type="checkbox" name="excluir[]" id="excluir_all" /></th>
+                <th style="width:2%;"><input type="checkbox" name="delete[]" id="delete_all" /></th>
                 <th style="width:25%;"><strong>Data</strong></th>
                 <th><strong>Título</strong></th>
                 <th style="width:15%;"><strong>Seção</strong></th>
@@ -45,7 +45,7 @@
             <tbody class="no-border-y">
               <?php foreach ( $data['list'] as $row ): ?>
                 <tr>
-                  <td><input class="excluir" type="checkbox" name="excluir[]" id="exc_<?php echo $row['name']; ?>_<?php echo $row['id']; ?>" /></td>
+                  <td><input class="excluir" type="checkbox" name="delete[]" id="del_<?php echo $row['name']; ?>_<?php echo $row['id']; ?>" /></td>
                   <td><?php echo $row['del_data']; ?></td>
                   <td><?php echo $row['titulo']; ?></td>
                   <td><?php echo $row['secao']; ?></td>
