--- a/src/app/admin/views/essential/log_lista.phtml
+++ b/src/app/admin/views/essential/log_lista.phtml
@@ -11,7 +11,7 @@
       </div>
 
       <div class="content">
-        <form method="get" class="form_busca">
+        <form method="get" class="form_search">
           <div class="col-sm-4 col-md-4 col-lg-2">
             <input class="form-control" name="usuario" type="text" placeholder="Busca por nome de usuário" value="<?php echo $data['busca']['usuario']; ?>">
           </div>
@@ -24,7 +24,7 @@
           <div class="col-sm-4 col-md-4 col-lg-2">
             <?php echo $data['busca']['name']; ?>
           </div>
-          <input type="button" value="Limpar" class="limpar_busca btn btn-default btn-rad" />
+          <input type="button" value="Limpar" class="clean_search btn btn-default btn-rad" />
           <input type="submit" value="Buscar" class="btn btn-info btn-rad" />
         </form>
       </div>
@@ -51,7 +51,7 @@
                   <td><?php echo $row['name']; ?></td>
                   <td><?php echo $row['descricao']; ?></td>
                   <td class="text-center">
-                    <a class="label label-default btn_edicao" href="<?php echo $row['id_log']; ?>">
+                    <a class="label label-default btn_edit" href="<?php echo $row['id_log']; ?>">
                       <i class="fa fa-clipboard"></i>
                     </a>
                   </td>
