--- a/src/app/admin/views/exemplo_cadastro.phtml
+++ b/src/app/admin/views/exemplo_cadastro.phtml
@@ -256,7 +256,7 @@
           <div class="form-group">
             <label class="col-sm-2 control-label">Data Mask</label>
             <div class="col-sm-10">
-              <input name="title_home" type="text" value="" placeholder="Data" class="form-control dataMask">
+              <input name="title_home" type="text" value="" placeholder="Data" class="form-control dateMask">
             </div>
           </div>
           <div class="form-group">
