--- a/src/app/admin/views/noticia_lista.phtml
+++ b/src/app/admin/views/noticia_lista.phtml
@@ -1,4 +1,4 @@
-<input type="hidden" id="link_prefix" value="/admin/noticia/" />
+<input type="hidden" id="link_prefix" value="/admin/<?php echo $this->_data['entity']['tbl']; ?>/" />
 
 <div class="row">
   <div class="col-md-12">
@@ -11,14 +11,14 @@
       </div>
 
       <div class="content">
-        <form method="get" class="form_busca">
+        <form method="get" class="form_search">
           <div class="col-sm-4 col-md-4 col-lg-2">
             <input class="form-control" name="titulo" type="text" placeholder="Busca por titulo" value="<?php echo $data['busca']['titulo']; ?>">
           </div>
           <div class="col-sm-4 col-md-4 col-lg-2">
             <?php echo $data['busca']['id_noticia_cat']; ?>
           </div>
-          <input type="button" value="Limpar" class="limpar_busca btn btn-default btn-rad" />
+          <input type="button" value="Limpar" class="clean_search btn btn-default btn-rad" />
           <input type="submit" value="Buscar" class="btn btn-info btn-rad" />
         </form>
       </div>
@@ -30,7 +30,7 @@
           <table class="table no-border hover">
             <thead class="no-border">
               <tr>
-                <th style="width:2%;"><input type="checkbox" name="excluir[]" id="excluir_all" /></th>
+                <th style="width:2%;"><input type="checkbox" name="delete[]" id="delete_all" /></th>
                 <th style="width:5%;"><strong>Ativo</strong></th>
                 <th style="width:5%;"><strong>Ordem</strong></th>
                 <th style="width:10%;"><strong>Data</strong></th>
@@ -42,17 +42,17 @@
             <tbody class="no-border-y">
               <?php foreach ( $data['list'] as $row ): ?>
                 <tr>
-                  <td><input class="excluir" type="checkbox" name="excluir[]" id="exc_noticia_<?php echo $row['id_noticia']; ?>" /></td>
-                  <td><input class="setAtivo" type="checkbox" <?php if ( $row['ativo'] == '1' ): ?> checked="checked"<?php endif; ?> id="<?php echo $row['id_noticia']; ?>" /></td>
+                  <td><input class="excluir" type="checkbox" name="delete[]" id="del_noticia_<?php echo $row['id_noticia']; ?>" /></td>
+                  <td><input class="setAtivo" type="checkbox" <?php if ( $row['active'] == '1' ): ?> checked="checked"<?php endif; ?> id="<?php echo $row['id_noticia']; ?>" /></td>
                   <td><?php echo $row['ordem']; ?></td>
                   <td><?php echo $row['data']; ?></td>
                   <td><?php echo $row['categoria']; ?></td>
                   <td><?php echo $row['titulo']; ?></td>
                   <td class="text-center">
-                    <a class="label label-default btn_edicao" href="<?php echo $row['id_noticia']; ?>">
+                    <a class="label label-default btn_edit" href="<?php echo $row['id_noticia']; ?>">
                       <i class="fa fa-pencil"></i>
                     </a>
-                    <a class="label label-danger excluir_shortcut" href="#">
+                    <a class="label label-danger delete_shortcut" href="#">
                       <i class="fa fa-times"></i>
                     </a>
                   </td>
