--- a/src/app/admin/views/paginacat_cadastro.phtml
+++ b/src/app/admin/views/paginacat_cadastro.phtml
@@ -13,14 +13,14 @@
 
         <form id="main_form" class="form-horizontal group-border-dashed ajaxform" method="post" style="border-radius: 0px;" onsubmit="return false;">
 
-          <input type="hidden" name="redirect" value="cadastro" />
+          <input type="hidden" name="redirect" value="save" />
 
           {$SUBMIT}
 
           <div class="form-group">
-            <label class="col-sm-2 control-label" for="ativo">Ativo</label>
+            <label class="col-sm-2 control-label" for="active">Ativo</label>
             <div class="col-sm-10">
-              <input type="checkbox" name="ativo" id="ativo" <?php if ( @$data['table']['ativo'] == '1' ): ?>checked="checked"<?php endif; ?> />
+              <input type="checkbox" name="active" id="active" <?php if ( @$data['table']['active'] == '1' ): ?>checked="checked"<?php endif; ?> />
             </div>
           </div>
 
