--- a/src/app/admin/views/paginacat_lista.phtml
+++ b/src/app/admin/views/paginacat_lista.phtml
@@ -11,11 +11,11 @@
       </div>
 
       <div class="content">
-        <form method="get" class="form_busca">
+        <form method="get" class="form_search">
           <div class="col-sm-4 col-md-4 col-lg-2">
             <input class="form-control" name="titulo" type="text" placeholder="Busca por titulo" value="<?php echo $data['busca']['titulo']; ?>">
           </div>
-          <input type="button" value="Limpar" class="limpar_busca btn btn-default btn-rad" />
+          <input type="button" value="Limpar" class="clean_search btn btn-default btn-rad" />
           <input type="submit" value="Buscar" class="btn btn-info btn-rad" />
         </form>
       </div>
@@ -27,7 +27,7 @@
           <table class="table no-border hover">
             <thead class="no-border">
               <tr>
-                <th style="width:2%;"><input type="checkbox" name="excluir[]" id="excluir_all" /></th>
+                <th style="width:2%;"><input type="checkbox" name="delete[]" id="delete_all" /></th>
                 <th style="width:5%;"><strong>Ativo</strong></th>
                 <th style="width:5%;"><strong>Ordem</strong></th>
                 <th style="width:15%;"><strong>Titulo</strong></th>
@@ -38,16 +38,16 @@
             <tbody class="no-border-y">
               <?php foreach ( $data['list'] as $row ): ?>
                 <tr>
-                  <td><input class="excluir" type="checkbox" name="excluir[]" id="exc_<?php echo $this->_data['entity']['name']; ?>_<?php echo $row[$this->_data['entity']['id']]; ?>" /></td>
-                  <td><input class="setAtivo" type="checkbox" <?php if ( $row['ativo'] == '1' ): ?> checked="checked"<?php endif; ?> id="<?php echo $row[$this->_data['entity']['id']]; ?>" /></td>
+                  <td><input class="excluir" type="checkbox" name="delete[]" id="del_<?php echo $this->_data['entity']['name']; ?>_<?php echo $row[$this->_data['entity']['id']]; ?>" /></td>
+                  <td><input class="setAtivo" type="checkbox" <?php if ( $row['active'] == '1' ): ?> checked="checked"<?php endif; ?> id="<?php echo $row[$this->_data['entity']['id']]; ?>" /></td>
                   <td><?php echo $row['ordem']; ?></td>
                   <td><?php echo $row['titulo']; ?></td>
                   <td><?php echo $row['inc_data']; ?></td>
                   <td class="text-center">
-                    <a class="label label-default btn_edicao" href="<?php echo $row[$this->_data['entity']['id']]; ?>">
+                    <a class="label label-default btn_edit" href="<?php echo $row[$this->_data['entity']['id']]; ?>">
                       <i class="fa fa-pencil"></i>
                     </a>
-                    <a class="label label-danger excluir_shortcut" href="#">
+                    <a class="label label-danger delete_shortcut" href="#">
                       <i class="fa fa-times"></i>
                     </a>
                   </td>
