--- a/src/app/admin/views/essential/log_list.phtml
+++ b/src/app/admin/views/essential/log_list.phtml
@@ -13,16 +13,16 @@
       <div class="content">
         <form method="get" class="form_search">
           <div class="col-sm-4 col-md-4 col-lg-2">
-            <input class="form-control" name="usuario" type="text" placeholder="Busca por nome de usuário" value="<?php echo $data['busca']['usuario']; ?>">
+            <input class="form-control" name="admin" type="text" placeholder="Busca por nome de administrador" value="<?php echo $data['search']['admin']; ?>">
           </div>
           <div class="col-sm-4 col-md-4 col-lg-2">
-            <input class="form-control" name="descricao" type="text" placeholder="Busca por descrição" value="<?php echo $data['busca']['descricao']; ?>">
+            <input class="form-control" name="description" type="text" placeholder="Busca por descrição" value="<?php echo $data['search']['description']; ?>">
           </div>
           <div class="col-sm-4 col-md-4 col-lg-2">
-            <?php echo $data['busca']['acao']; ?>
+            <?php echo $data['search']['action']; ?>
           </div>
           <div class="col-sm-4 col-md-4 col-lg-2">
-            <?php echo $data['busca']['name']; ?>
+            <?php echo $data['search']['name']; ?>
           </div>
           <input type="button" value="Limpar" class="clean_search btn btn-default btn-rad" />
           <input type="submit" value="Buscar" class="btn btn-info btn-rad" />
@@ -45,11 +45,11 @@
             <tbody class="no-border-y">
               <?php foreach ( $data['list'] as $row ): ?>
                 <tr>
-                  <td><?php echo $row['inc_data']; ?></td>
-                  <td><?php echo $row['administrador']; ?></td>
-                  <td><?php echo $row['acao']; ?></td>
+                  <td><?php echo $row['inc_date']; ?></td>
+                  <td><?php echo $row['admin']; ?></td>
+                  <td><?php echo $row['action']; ?></td>
                   <td><?php echo $row['name']; ?></td>
-                  <td><?php echo $row['descricao']; ?></td>
+                  <td><?php echo $row['description']; ?></td>
                   <td class="text-center">
                     <a class="label label-default btn_edit" href="<?php echo $row['id_log']; ?>">
                       <i class="fa fa-clipboard"></i>
