Troca de nomes na parte de Autenticação e Recuperação de senha.

--- a/src/app/admin/views/essential/recover_password.phtml
+++ b/src/app/admin/views/essential/recover_password.phtml
@@ -19,7 +19,7 @@
               <div class="col-sm-12">
                 <div class="input-group">
                   <span class="input-group-addon"><i class="fa fa-lock"></i></span>
-                  <input name="senha" type="password" placeholder="Digite a nova senha" class="form-control">
+                  <input name="password" type="password" placeholder="Digite a nova senha" class="form-control">
                 </div>
               </div>
             </div>
@@ -27,7 +27,7 @@
               <div class="col-sm-12">
                 <div class="input-group">
                   <span class="input-group-addon"><i class="fa fa-lock"></i></span>
-                  <input name="confirmar_senha" type="password" placeholder="Confirme sua nova senha" class="form-control">
+                  <input name="password2" type="password" placeholder="Confirme sua nova senha" class="form-control">
                 </div>
               </div>
             </div>
