--- a/src/app/admin/views/layouts/layout.phtml
+++ b/src/app/admin/views/layouts/layout.phtml
@@ -39,13 +39,13 @@
           <ul class="nav navbar-nav navbar-right user-nav">
             <li class="dropdown profile_menu">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                <?php echo $data['user']['avatar_img'] ?>
-                <?php echo $data['user']['name'] ?> <b class="caret"></b>
+                <?php echo $data['admin']['avatar_img'] ?>
+                <?php echo $data['admin']['name'] ?> <b class="caret"></b>
               </a>
               <ul class="dropdown-menu">
-                <li><a href="/admin/config/cadastro/">Meus Dados</a></li>
+                <li><a href="/admin/config/save/">Meus Dados</a></li>
                 <li class="divider"></li>
-                <li><a href="/admin/usuario_auth/logout/">Logout</a></li>
+                <li><a href="/admin/admin_auth/logout/">Logout</a></li>
               </ul>
             </li>
           </ul>
