Ajustes de nome na área do Config

--- a/src/app/admin/views/essential/config_save.phtml
+++ b/src/app/admin/views/essential/config_save.phtml
@@ -19,7 +19,7 @@
           <div class="form-group">
             <label class="col-sm-2 control-label">Nome</label>
             <div class="col-sm-10">
-              <input name="nome" type="text" value="<?php echo $data['table']['nome']; ?>" placeholder="Seu nome" class="form-control">
+              <input name="name" type="text" value="<?php echo $data['table']['name']; ?>" placeholder="Seu nome" class="form-control">
             </div>
           </div>
 
@@ -33,7 +33,7 @@
           <div class="form-group">
             <label class="col-sm-2 control-label">Senha</label>
             <div class="col-sm-10">
-              <input name="senha" class="form-control" type="password" value="" />
+              <input name="password" class="form-control" type="password" value="" />
             </div>
           </div>
 
